# fradium

./: .cursorignore  .env.example  .env.production  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bitcoin.conf  canister_ids.json  convert-images.js  convert-network-svgs.js  debug-solana.js  dfx.json  dfx_backup.json  mops.toml  package-lock.json  package.json
.github/workflows/: build.yaml
docs/: design_system.md  docs.md  log.md
extension/: BALANCE_LOADING_IMPROVEMENTS.md  LOADING_IMPROVEMENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: App.tsx  background.ts  content.tsx  main.tsx  popup.tsx
extension/src/background/: background.ts  content.ts
extension/src/canister/: backend_service.ts  base_service.ts  canister_handler.ts  canister_result.ts  canister_service.ts  ransomware_service.ts
extension/src/components/: all-networks-dropdown.tsx  bottom-app-bar.tsx  bottom-appbard.tsx  custom-card.tsx  header.tsx  logout-button.tsx  protected-route.tsx
extension/src/components/ui/: all-networks-dropdown.tsx  balance-refresh-button.tsx  bottom-appbar.tsx  (+7 more)
extension/src/config/: canisters.tsx  networkConfig.ts
extension/src/constants/: routes.tsx
extension/src/docs/: authentication-sync-fix.md
extension/src/examples/: receivePageExample.tsx  walletAddressesExample.tsx
extension/src/icp/: icpAuth.ts
extension/src/interfaces/: carousel.tsx
extension/src/lib/: AuthGuard.tsx  authContext.tsx  backgroundMessaging.ts  balanceService.ts  config.ts  icpAuth.ts  index.ts  localStorage.ts  safeUtils.ts  tokenUtils.ts  walletContext.tsx
extension/src/pages/: AnalyzeAdress.tsx
extension/src/scripts/: background.ts
extension/src/service/: aiAnalyzeService.ts  bitcoinAnalyzeService.ts  ethereumAnalyzeService.ts  historyService.ts  localStorageService.ts  solanaAnalyzeService.ts  types.ts
extension/src/services/: balanceService.ts  sendService.ts
extension/src/types/: analyze_model.type.ts
fradium-extension/: package.json  pnpm-lock.yaml
fradium-extension/src/: content.tsx  popup.tsx
fradium-extension/src/components/: bottom-app-bar.tsx  custom-card.tsx  header.tsx  logout-button.tsx
fradium-extension/src/config/: canisters.tsx
mythril/: .dockerignore  .env.example  Dockerfile  app.py  docker-compose.yaml  package-lock.json  package.json  requirements.txt
scripts/: bitcoin.mining_block.sh  build.ai.sh  build.fradium_index.args.sh  build.fradium_index.sh  build.fradium_ledger.args.sh  build.fradium_ledger.sh  build.fradium_token.sh  build.icp_index.args.sh  build.icp_index.sh  build.icp_index.wasm.sh  build.icp_ledger.args.sh  build.icp_ledger.sh  build.icp_ledger.wasm.sh  build.wallet.sh  check.all_canister_cycles.sh  deploy.fradium_token.sh  dummy.create_safe_address.sh  dummy.create_unsafe_address.sh  fradium.check_balance.sh  fradium.transfer_token.sh  icp.check_balance.sh  icp.transfer_token.sh  initial_token.sh  setup.sh
src/ai/: Cargo.toml  README.md  ai.did  build.rs
src/ai/config/: scaler_parameters.json
src/ai/data_samples/: test_sample.json
src/ai/detector_service/: Cargo.toml  dfx.json
src/ai/detector_service/src/: address_detector.rs  lib.rs  ransomware_detector.did
src/ai/detector_service/src/btc/: config.rs  mod.rs  models.rs
src/ai/detector_service/src/eth/: config.rs  data_extractor.rs  feature_calculator.rs  mod.rs  models.rs  price_converter.rs
src/ai/models/: eth_ransomware_model_mlp.onnx  eth_risk_model_mlp.onnx  icp_compliance_model_v1.onnx  ransomware_model.onnx  ransomware_model_mlp.onnx  sol_risk_model_mlp.onnx
src/ai/scripts/: onnx_xgtrain_v3.py
src/ai/src/: address_detector.rs  lib.rs  shared_models.rs
src/ai/src/btc/: config.rs
src/ai/src/eth/: config.rs  models.rs  prediction.rs
src/ai/src/icp/: config.rs  data_extractor.rs  feature_calculator.rs  mod.rs  models.rs  parser.rs  prediction.rs
src/ai/src/sol/: config.rs  data_extractor.rs  feature_calculator.rs  mod.rs  models.rs  prediction.rs  price_converter.rs
src/ai/training/config/: model_metadata.json
src/backend/: main-clean.mo  main.mo  types.mo
src/backend/modules/: analyze.mo  community.mo  faucet.mo  transaction.mo  wallet.mo
src/bitcoin/: BitcoinApi.mo  EcdsaApi.mo  Main.mo
src/bitcoin/src/: Main.mo
src/chatbot/: chatbot.mo
src/declarations/ai/: ai.did  ai.did.d.ts  ai.did.js  index.d.ts  index.js
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/declarations/chatbot/: chatbot.did  index.js
src/declarations/fradium_index/: index.d.ts  index.js
src/declarations/fradium_ledger/: index.d.ts  index.js
src/declarations/fradium_token/: index.js
src/declarations/icp_ledger/: icp_ledger.did.d.ts  icp_ledger.did.js
src/declarations/sol_rpc/: sol_rpc.did.d.ts
src/declarations/wallet/: wallet.did  wallet.did.d.ts  wallet.did.js
src/ethereum/: Cargo.toml  ethereum.did
src/ethereum/src/: eth_get_address.rs  eth_get_balance.rs  eth_send_transaction.rs  evm_signer.rs  fees.rs  lib.rs
src/ethereum/src/service/: eth_get_address.rs  eth_get_balance.rs  eth_get_transaction.rs  eth_send.rs  mod.rs
src/frontend/: env.example  index.html  package.json  tailwind.config.js  vercel.json  vite.config.js
src/frontend/src/: main.jsx
src/solana/: Cargo.toml  build.sh  solana.did
src/solana/rpc/libs/client/: Cargo.toml
src/solana/rpc/libs/types/: Cargo.toml
src/solana/src/: main.rs
src/token/: token.mo
src/wallet/: Cargo.toml  wallet.did
src/wallet/src/: lib.rs
src/wallet/src/bitcoin/: lib.rs
src/wallet/src/bitcoin/service/: bitcoin_address.rs  bitcoin_balance.rs  bitcoin_send.rs
src/wallet/src/ethereum/: lib.rs
src/wallet/src/ethereum/service/: ethereum_address.rs  ethereum_balance.rs  ethereum_send.rs
src/wallet/src/shared/: auth.rs  mod.rs
src/wallet/src/solana/: api.rs  lib.rs  main.rs
trial-extension/: package-lock.json  tsconfig.app.json
trial-extension/src/constants/: routes.tsx
trial-extension/src/pages/: Home.tsx
(+239 files in other folders)
