[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = "0.13"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tract-core = { version = "0.21.13", default-features = false }
tract-onnx = { version = "0.21.13", default-features = false }
getrandom = { workspace = true, default-features = false, features = ["custom"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = { workspace = true }
num-traits = { workspace = true }
