[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = "0.13"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tract-core = { version = "0.21.13", default-features = false }
tract-onnx = { version = "0.21.13", default-features = false }
getrandom = { version = "*", default-features = false, features = ["custom"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
num-traits = "0.2.19"
thiserror = "1.0.61"
sha2 = "0.10.9"
crc32fast = "1.5.0"

[profile.release]
opt-level = 's'  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[build-dependencies]
serde_json = "1.0.143"