[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk-timers = "0.11.0"
serde_bytes = "0.11.15"

alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
