[package]
name = "solana"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "solana"
path = "src/main.rs"

[dependencies]
bs58 = { workspace = true }
candid = { workspace = true }
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { workspace = true, default-features = false, features = ["custom"] }
ic-cdk = { workspace = true }
ic-ed25519 = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
sol_rpc_client = { path = "rpc//libs/client", features = ["ed25519"] }
sol_rpc_types = { path = "rpc//libs/types" }
solana-hash = "=2.3.0"
solana-instruction = "=2.3.0"
solana-keypair = "=2.2.3"
solana-message = "=2.4.0"
solana-program = "=2.3.0"
solana-pubkey = "=2.4.0"
solana-signature = "=2.3.0"
solana-system-interface = "1.0.0"
solana-transaction = "=2.2.3"

[dev-dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
solana-client = "=2.3.3"
solana-commitment-config = "=2.2.1"
solana-keypair = "=2.2.3"
solana-rpc-client-nonce-utils = "=2.3.3"
solana-signer = "=2.2.1"
