[package]
name = "ransomware_detector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-core = { version = "0.21.13", default-features = false }
tract-onnx = { version = "0.21.13", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
num-traits = "0.2.19"